# HuffmansAlgorithm-

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md
html/: _i_o_8cpp.html  _i_o_8hpp.html  _i_o_8hpp_source.html  annotated.html  binary_tree_8cpp.html  binary_tree_8hpp.html  binary_tree_8hpp_source.html  class_i_o-members.html  class_i_o.html  class_linked_queue-members.html  class_linked_queue.html  classbinary_tree-members.html  classbinary_tree.html  classes.html  dir_14e6cd449fe23e6f0cf81bfe8cc72c13.html  dir_21d44dfcf1641a01536ec7a0efe537d4.html  dir_328b968c35ac7c7f7576c36378b876f4.html  dir_5194e5fea318fda12687127c23f8aba1.html  dir_6272b9d4c8f62107df4c324a97442de0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_81b9b090129394ba7f4e2aa2389dea5e.html  dir_93c3a9043899843f27511343a62b2715.html  dir_e6df591b0639d4c4807ef64d058833e2.html  dir_fae119eb913a40fe8ed97cde8b98911e.html  files.html  functions.html  functions_func.html  generate_huffman_tree_8cpp.html  generate_huffman_tree_8hpp.html  generate_huffman_tree_8hpp_source.html  globals.html  globals_func.html  globals_type.html  globals_vars.html  index.html  letter_counter_8cpp.html  letter_counter_8hpp.html  letter_counter_8hpp_source.html  linked_queue_8hpp.html  linked_queue_8hpp_source.html  (+8 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  typedefs_0.js  variables_0.js
src/: CMakeLists.txt
src/IO/: CMakeLists.txt  IO.cpp
src/IO/include/: IO.hpp
src/algorithms/: CMakeLists.txt  generateHuffmanTree.cpp  letterCounter.cpp
src/algorithms/include/: generateHuffmanTree.hpp  letterCounter.hpp
src/app/: CMakeLists.txt  main.cpp
src/fileManager/: CMakeLists.txt  myRead.cpp  myWrite.cpp
src/fileManager/include/: myRead.hpp  myWrite.hpp
src/structures/: CMakeLists.txt  binaryTree.cpp
src/structures/include/: binaryTree.hpp  linkedQueue.hpp
test/: CMakeLists.txt  algorithmsTests.cpp  structuresTests.cpp
test/algorithms/: CMakeLists.txt
test/structures/: CMakeLists.txt
